@@ -1,7 +1,6 @@
 using NUnit.Framework;
 using White.Core.Factory;
 using White.Core.UIItems;
-using White.Core.UIItems.Finders;
 using White.Core.UIItems.WindowItems;
 using White.Core.UITests.Testing;
 
@@ -32,24 +31,6 @@ namespace White.Core.UITests
             Window foundWindow = Application.Find(obj => obj.Equals("ModalForm"), InitializeOption.NoCache);
             CloseModal(Window);
             Assert.AreNotEqual(null, foundWindow);
-        }
-    }
-
-    [TestFixture, WinFormCategory]
-    public class WinFormApplicationTest : ControlsActionTest
-    {
-        [Test, WinFormCategory]
-        public void GetWindowBasedOnFrameworkId()
-        {
-            Window frameworkWindow =
-                Application.GetWindow(SearchCriteria.ByText("Form1").AndOfFramework(ApplicationClass.WinForm.ToString()), InitializeOption.NoCache);
-            Assert.AreNotEqual(null, frameworkWindow);
-        }
-
-        [Test, WinFormCategory]
-        public void FindWindowBasedOnSearchCriteria()
-        {
-            Assert.AreNotEqual(null, Application.GetWindow(SearchCriteria.ByAutomationId("Form1"), InitializeOption.NoCache));
         }
     }
 }
