@@ -160,10 +160,12 @@
     <Compile Include="UIItems\VScrollBarTest.cs" />
     <Compile Include="UIItems\WindowAbstractTest.cs" />
     <Compile Include="UIItems\WindowItems\TitleBarTest.cs" />
+    <Compile Include="UIItems\WindowItems\UIItemContainerScenarioTest.cs" />
     <Compile Include="UIItems\WindowItems\UIItemContainerTest.cs" />
     <Compile Include="UIItems\WindowItems\WindowCloseTest.cs" />
     <Compile Include="UIItems\WindowItems\WindowControlsTest.cs" />
     <Compile Include="UIItems\WindowItems\WindowTest.cs" />
+    <Compile Include="UIItems\WindowItems\WinFormScenarioTest.cs" />
     <Compile Include="UIItems\WindowItems\WinFormWindowTest.cs" />
     <Compile Include="UIItems\WindowItems\WPFWindowTest.cs" />
     <Compile Include="UIItems\WindowStripControls\StatusBarTest.cs" />
@@ -177,6 +179,7 @@
     <Compile Include="UIItems\WPFTextBlockTest.cs" />
     <Compile Include="WindowsAPI\NativeWindowTest.cs" />
     <Compile Include="WindowWithoutTitleBarTest.cs" />
+    <Compile Include="WinFormApplicationTest.cs" />
     <Compile Include="WPFModalWindowTest.cs" />
   </ItemGroup>
   <ItemGroup>
