@@ -12,10 +12,10 @@ namespace White.Core.UnitTests.UIItems.Finders
         [Test]
         public void ControlTypeCondition()
         {
-            Assert.AreEqual("ControlType=button", SearchConditionFactory.CreateForControlType(typeof (Button), Constants.WPFFrameworkId).ToString());
-            Assert.AreEqual("ControlType=pane", SearchConditionFactory.CreateForControlType(typeof(TestCustomUIItem), Constants.WPFFrameworkId).ToString());
-            Assert.AreEqual("ControlType=menu bar", SearchConditionFactory.CreateForControlType(typeof (MenuBar), Constants.WinFormFrameworkId).ToString());
-            Assert.AreEqual("ControlType=menu", SearchConditionFactory.CreateForControlType(typeof (MenuBar), Constants.WPFFrameworkId).ToString());
+            Assert.AreEqual("ControlType=button", SearchConditionFactory.CreateForControlType(typeof (Button), WindowsFramework.Wpf).ToString());
+            Assert.AreEqual("ControlType=pane", SearchConditionFactory.CreateForControlType(typeof(TestCustomUIItem), WindowsFramework.Wpf).ToString());
+            Assert.AreEqual("ControlType=menu bar", SearchConditionFactory.CreateForControlType(typeof(MenuBar), WindowsFramework.WinForms).ToString());
+            Assert.AreEqual("ControlType=menu", SearchConditionFactory.CreateForControlType(typeof (MenuBar), WindowsFramework.Wpf).ToString());
         }
     }
 
