@@ -3,6 +3,7 @@ Microsoft Visual Studio Solution File, Format Version 12.00
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution Items", "{1BCBA4C4-8C47-496C-B0D4-FDE9D066ED27}"
 	ProjectSection(SolutionItems) = preProject
 		..\Build.cmd = ..\Build.cmd
+		..\Changes.txt = ..\Changes.txt
 		Override.config = Override.config
 		..\White.msbuild = ..\White.msbuild
 	EndProjectSection
@@ -160,36 +161,6 @@ Global
 		{3CC2654B-2108-4A38-AFFF-82718703EBE3}.Debug|x86.Build.0 = Debug|x86
 		{3CC2654B-2108-4A38-AFFF-82718703EBE3}.Release|x86.ActiveCfg = Release|x86
 		{3CC2654B-2108-4A38-AFFF-82718703EBE3}.Release|x86.Build.0 = Release|x86
-		{7A44FB83-B353-4449-A7AD-FD6319FC5C76}.Debug|Any CPU.ActiveCfg = Debug|x86
-		{7A44FB83-B353-4449-A7AD-FD6319FC5C76}.Debug|Mixed Platforms.ActiveCfg = Debug|x86
-		{7A44FB83-B353-4449-A7AD-FD6319FC5C76}.Debug|Mixed Platforms.Build.0 = Debug|x86
-		{7A44FB83-B353-4449-A7AD-FD6319FC5C76}.Debug|x86.ActiveCfg = Debug|x86
-		{7A44FB83-B353-4449-A7AD-FD6319FC5C76}.Debug|x86.Build.0 = Debug|x86
-		{7A44FB83-B353-4449-A7AD-FD6319FC5C76}.Release|Any CPU.ActiveCfg = Release|x86
-		{7A44FB83-B353-4449-A7AD-FD6319FC5C76}.Release|Mixed Platforms.ActiveCfg = Release|x86
-		{7A44FB83-B353-4449-A7AD-FD6319FC5C76}.Release|Mixed Platforms.Build.0 = Release|x86
-		{7A44FB83-B353-4449-A7AD-FD6319FC5C76}.Release|x86.ActiveCfg = Release|x86
-		{7A44FB83-B353-4449-A7AD-FD6319FC5C76}.Release|x86.Build.0 = Release|x86
-		{EC32732F-6CB9-4078-B3A8-E3F038D5C2E1}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{EC32732F-6CB9-4078-B3A8-E3F038D5C2E1}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{EC32732F-6CB9-4078-B3A8-E3F038D5C2E1}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
-		{EC32732F-6CB9-4078-B3A8-E3F038D5C2E1}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
-		{EC32732F-6CB9-4078-B3A8-E3F038D5C2E1}.Debug|x86.ActiveCfg = Debug|Any CPU
-		{EC32732F-6CB9-4078-B3A8-E3F038D5C2E1}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{EC32732F-6CB9-4078-B3A8-E3F038D5C2E1}.Release|Any CPU.Build.0 = Release|Any CPU
-		{EC32732F-6CB9-4078-B3A8-E3F038D5C2E1}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
-		{EC32732F-6CB9-4078-B3A8-E3F038D5C2E1}.Release|Mixed Platforms.Build.0 = Release|Any CPU
-		{EC32732F-6CB9-4078-B3A8-E3F038D5C2E1}.Release|x86.ActiveCfg = Release|Any CPU
-		{C186FEFC-D0B7-4FED-822D-688302B3B8A0}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{C186FEFC-D0B7-4FED-822D-688302B3B8A0}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{C186FEFC-D0B7-4FED-822D-688302B3B8A0}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
-		{C186FEFC-D0B7-4FED-822D-688302B3B8A0}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
-		{C186FEFC-D0B7-4FED-822D-688302B3B8A0}.Debug|x86.ActiveCfg = Debug|Any CPU
-		{C186FEFC-D0B7-4FED-822D-688302B3B8A0}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{C186FEFC-D0B7-4FED-822D-688302B3B8A0}.Release|Any CPU.Build.0 = Release|Any CPU
-		{C186FEFC-D0B7-4FED-822D-688302B3B8A0}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
-		{C186FEFC-D0B7-4FED-822D-688302B3B8A0}.Release|Mixed Platforms.Build.0 = Release|Any CPU
-		{C186FEFC-D0B7-4FED-822D-688302B3B8A0}.Release|x86.ActiveCfg = Release|Any CPU
 		{7A44FB83-B353-4449-A7AD-FD6319FC5C76}.Debug|x86.ActiveCfg = Debug|x86
 		{7A44FB83-B353-4449-A7AD-FD6319FC5C76}.Debug|x86.Build.0 = Debug|x86
 		{7A44FB83-B353-4449-A7AD-FD6319FC5C76}.Release|x86.ActiveCfg = Release|x86
